Fixed clipping bugs in HTML when viewport is maxed out

--- a/styles/general_styles.css
+++ b/styles/general_styles.css
@@ -78,6 +78,10 @@ li.subentry { /* This is for creating a sub-entry below a list element. This ens
     overflow: hidden;
 }
 
+.scrollable { /* Add scrollbar to container for overflowed content */
+    overflow: scroll;
+}
+
 /* General navbar styling */
 #navbar {
     background-color: lightblue;
